<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TuniCovid</string>
    <string name="negative" translatable="false"> You tested negative</string>
    <string name="test" translatable="false"> you probably were not infected at the time , your
        sample is collected , the test result only means that you did not have covid-19 at the time
        of testing . continue to take steps to protect yourself </string>
    <string name="own" translatable="false">Do your own test </string>
    <string name="affect" translatable="false"> covid19 affects  people in different ways
        .Most infected people  develop a mild to moderate from of the disease and recover
        without hospialization </string>
    <string name="frequence" translatable="false"> Most frequent symptoms </string>
    <string name="fv" translatable="false">Fever </string>
    <string name="dry" translatable="false">Dry cough </string>
    <string name="td" translatable="false">Tired </string>
    <string name="less" translatable="false">Less common symptoms  </string>
    <string name="diarrhea" translatable="false">Diarrhea  </string>
    <string name="conj" translatable="false">Conjunctives  </string>
    <string name="headache" translatable="false">Headache </string>
    <string name="smell" translatable="false">Loss of smell or taste  </string>
    <string name="rash" translatable="false">Rash , or discoloration of the fingers or toes   </string>
    <string name="sore" translatable="false">"sore throat "</string>
    <string name="sev" translatable="false">" severe symptoms "</string>
    <string name="bre" translatable="false">" difficulty breathing or shortness of breath  "</string>
    <string name="ee" translatable="false">" eeling of tightness or pain in the chest   "</string>
    <string name="skill" translatable="false">"loss of speech or motor skills    "</string>
    <string name="pos" translatable="false">"You tested positive    "</string>
    <string name="worr" translatable="false">"Don't worry , you have to know what protective steps to take to prevent others from getting sick  "</string>
    <string name="bc" translatable="false">your result</string>
    <string name="you_probably_were_not_infected_at_the_time_your_sample_was_collected_the_test_result_only_means_that_you_did_not_have_covid_19_at_the_time_of_testing_continue_to_take_steps_to_protect_yourself" translatable="false" tools:ignore="MissingTranslation">You probably were not infected at the time your sample was collected. The test result only means that you did not have COVID-19 at the time of testing. Continue to take steps to protect yourself.</string>
    <string name="you_test_negative" translatable="false">You test negative !</string>
    <string name="yourresult" translatable="false">your result</string>
    <string name="hello" translatable="false">hello</string>
    <string name="action_settings" translatable="false">action</string>
    <string name="home" translatable="false">home</string>
    <string name="serach" translatable="false">search</string>
    <string name="item_a" translatable="false">item</string>
    <string name="item_b" translatable="false">itemb</string>
    <string name="protect_yourself_and_others" translatable="false">Protect yourself and others</string>
    <string name="do_your_own_test" translatable="false">Covid-19</string>
    <string name="covid" translatable="false">COVID-19 affects people in different ways. Most infected people develop a mild to moderate form of the disease and recover without hospitalization.</string>
    <string name="all_you_need_is_stay_at_home">All you need is stay at home</string>
    <string name="prevention">Prevention</string>
    <string name="determine_your_test">Determine your test</string>
    <string name="limit_the_propagation_of_covid_19">LIMIT THE PROPAGATION OF COVID-19</string>
    <string name="testt">DO YOUR OWN TEST !</string>
    <string name="less_common_symptoms">Less common symptoms</string>
    <string name="stiffness">stiffness</string>
    <string name="sore_throat">sore throat</string>
    <string name="diarrheaa">diarrhea</string>
    <string name="headachee">headache</string>
    <string name="loss_of_smell_or_taste">loss of smell or taste</string>
    <string name="conjunctivitis">conjunctivitis</string>
    <string name="rash_or_discoloration_of_the_fingers_or_toes">rash, or discoloration of the fingers or toes</string>
    <string name="next">Next</string>
    <string name="do_your_own_testt">DO YOUR OWN TEST !</string>
    <string name="covid_19_affects_people_in_different_ways_most_infected_people_develop_a_mild_to_moderate_form_of_the_disease_and_recover_without_hospitalization">COVID-19 affects people in different ways. Most infected people develop a mild to moderate form of the disease and recover without hospitalization.</string>
    <string name="most_common_symptoms">Most common symptoms</string>
    <string name="fever">fever</string>
    <string name="dry_cough">dry cough</string>
    <string name="tired">tired</string>
    <string name="know_your_resualt">know your resualt</string>
    <string name="do_your_own_testtt">DO YOUR OWN TEST !</string>
    <string name="severe_symptoms">Severe symptoms</string>
    <string name="difficulty_breathing_or_shortness_of_breath">difficulty breathing or shortness of breath</string>
    <string name="feeling_of_tightness_or_pain_in_the_chest">Feeling of tightness or pain in the chest</string>
    <string name="loss_of_speech_or_motor_skills">loss of speech or motor skills</string>
    <string name="your_result">Your result</string>
    <string name="you_test_positive">You test positive !</string>
    <string name="don_t_worry_you_have_to_know_what_protective_steps_to_take_to_prevent_others_from_getting_sick">DON\'T WORRY !! You have to know what protective steps to take to prevent others from getting sick.</string>
    <string name="tunicovid">TuniCovid</string>
    <string name="are_you_feeling_sick">Are you feeling sick ?</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="swipe_left_for_register" translatable="false">Swipe Left for Register</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="e_mail" translatable="false">Email</string>

    <string name="swipe_right_for_login" translatable="false">Swipe Right for Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="re_type_password" translatable="false">Re-type Password</string>
    <string name="your_name" translatable="false">Full Name</string>
    <string name="search">Search</string>
    <string name="loginn">LogIn</string>
    <string name="homee">Home</string>


    <string name="action_sign_in_short" translatable="false">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="minimum_password" translatable="false">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed" translatable="false">Authentication failed, check your email and password or sign up</string>
    <string name="change_email" translatable="false">Change Email</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="send_password_reset_email" translatable="false">Send Password reset email</string>
    <string name="remove_user" translatable="false">Remove user</string>
    <string name="new_pass" translatable="false">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_name" translatable="false">Fullname</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="btn_link_to_register" translatable="false">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login" translatable="false">Already registered. Login Me!</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="btn_forgot_password" translatable="false">Forgot your password?</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"><![CDATA[<< Back]]></string>
    <string name="hint_new_email" translatable="false">New Email</string>
    <string name="btn_change" translatable="false">Change</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="btn_remove" translatable="false">Remove</string>
    <string name="btn_sign_out" translatable="false">Sign Out</string>
    <string name="lbl_forgot_password" translatable="false">Forgot password?</string>
    <string name="forgot_password_msg" translatable="false">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>

